# pledgecamp-repos

./: README.md
pledgecamp-contracts-develop/: .dockerignore  .env.dist  .eslintrc.js  .gitignore  CONTRIBUTING.md  Dockerfile  OVERVIEW.md  README.md  dev.sh  hardhat.config.js  package.json
pledgecamp-contracts-develop/analysis/: analysis.py  pyproject.toml  slither.db.json
pledgecamp-contracts-develop/contracts/: AccountManager.sol  AccountStorage.sol  Administrator.sol  CampShareManager.sol  CampShareStorage.sol  CloneFactory.sol  Moderator.sol  Ownable.sol  PLGProject.sol  PLGProjectFactory.sol
pledgecamp-contracts-develop/scripts/: allowance.js  backup-contracts.js  deploy.js  index.js  minify-contracts.js  npmstarter.sh
pledgecamp-contracts-develop/test/: AccountManager.js  AccountStorage.js  CampShare.js  ManagedCampShare.js  Moderator.js  ProjectSuccess.js  ProjectVeto.js
pledgecamp-nodeserver-develop/: .dockerignore  .env.dist  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  README.md  dev.sh  docker-compose.yml  knexfile.js  openapi.yaml  package.json
pledgecamp-nodeserver-develop/monitor/: index.js
pledgecamp-nodeserver-develop/scripts/: npmstarter.sh  remake_db.sh
pledgecamp-nodeserver-develop/server/: constants.js  index.js  start.js
pledgecamp-nodeserver-develop/tests/: test_projects.js
pledgecamp-oracle-develop/: .dockerignore  .env.dist  Dockerfile  DockerfileProd  README.md  dev.sh  docker-compose.yml  docker_postgres_init.sql  go.mod  go.sum  main.go  openapi.yaml
pledgecamp-oracle-develop/connect/: connect.go  postgres.go
(+92 files in other folders)
